2005-11-17  Ales Hakl  <ales at hakl dot net>

	* src/repl.c (command_print): Ad-hoc printing mechanism in
	commandline interpreter

	* src/native.c (native_macro_case): "case" construct (see 4.2.1 of
	R5RS) 

	* src/dfsch.c (dfsch_eval_proc): Comment describing ways to
	implement tail-recursion

2005-11-16  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (dfsch_new_frame, dfsch_lookup, dfsch_define,
	dfsch_set): Hash-table based environment frames 

	* src/hash.c (dfsch_hash_set_if_exists): Performance hack:
	hash-set-if-exists! 

	* src/native.c (native_form_let, native_form_letrec, 
	native_form_let_seq): All three variants of let, implemented using
	environment manipulation functions from dfsch.c

	* src/dfsch.c: Moved all (probably) manipulations of environment
	into one place.

	* src/native.c (native_macro_if): Reimplemented "if" to support
	both forms mentioned in R5RS

	* src/hash.c (hash_t): Native representation of hash tables

	* src/native.c (native_form_or, native_form_and): Working forms
	"or" and "and"

	* src/hash.c: Hash implementation on top of scheme objects

	* dfsch/hash.h: Hash data type

	* src/dfsch.c (dfsch_vector): varargs constructor for vectors

	* FIXED various warnings throghout the code.

	* src/dfsch.c (dfsch_make_form, dfsch_make_macro): Cleaned up
	terminology:
	     flow-macro -> macro
	     macro -> special-form

2005-11-15  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (dfsch_append): Fixed seg-fault when appending nothing.
	(dfsch_define): Fixed growth of top-level env. when redefining

	* src/util.c: Moved utility functions to separate source file

	* src/native.c (dfsch_native_register): Moved native functions
	into separate source file.

2005-11-14  Ales Hakl  <ales at hakl dot net>

	* src/stream.c (parse_vector): Vector support

	* dfsch/dfsch.h (DFSCH_*ARG*): Argument helpers for native functions 

	* src/dfsch.c: In-core representation of vectors 
	Removed expression parser code from dfsch.c