@@ -12,6 +12,11 @@ extern dfsch_object_t* dfsch_hash_set(dfsch_object_t* hash,
                                       dfsch_object_t* value);
 extern dfsch_object_t* dfsch_hash_unset(dfsch_object_t* hash,
                                         dfsch_object_t* key);
+extern dfsch_object_t* dfsch_hash_set_if_exists(dfsch_object_t* hash,
+                                                dfsch_object_t* key,
+                                                dfsch_object_t* value);
 
+
+extern dfsch_object_t* dfsch_hash_2_alist(dfsch_object_t* hash_obj);
 
 #endif
